--- a/index_cn.html
+++ b/index_cn.html
@@ -270,7 +270,7 @@ pre code {
 
 <div id="where-international-students-are-from-and-what-they-studywork-in-progress" class="section level3">
 <h3><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">國際學生來自哪里以及他們學習什麼（正在進行中）</font></font></h3>
-Google翻譯版本 <a href="https://briankimstudio.github.io/New_student/">English</a>
+Google翻譯繁體版本 <a href="https://briankimstudio.github.io/New_student/">English</a>
 <div id="summary" class="section level4">
 <h4><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">概括</font></font></h4>
 <ul>
