--- a/NCCU.html
+++ b/NCCU.html
@@ -367,7 +367,7 @@ International Doctoral Program in AsiaPacific Studies (IDAS)
 </tr>
 <tr>
 <td style="text-align:left;">
-Philosophy
+Graduate Institute of East Asian Studies
 </td>
 <td style="text-align:right;">
 5
@@ -378,7 +378,7 @@ Philosophy
 </tr>
 <tr>
 <td style="text-align:left;">
-Graduate Institute of East Asian Studies
+Philosophy
 </td>
 <td style="text-align:right;">
 5
@@ -444,7 +444,7 @@ Sociology
 </tr>
 <tr>
 <td style="text-align:left;">
-English
+Doctors Program in Teaching Chinese as a Second Language
 </td>
 <td style="text-align:right;">
 3
@@ -455,7 +455,7 @@ English
 </tr>
 <tr>
 <td style="text-align:left;">
-Doctors Program in Teaching Chinese as a Second Language
+English
 </td>
 <td style="text-align:right;">
 3
@@ -510,7 +510,40 @@ Management Information Systems
 </tr>
 <tr>
 <td style="text-align:left;">
+Graduate Institute of Russian Studies
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0.8
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Graduate Institute of Technology Innovation and Intellectual Property ManagementTechnology and Innovation Management Program
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0.8
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 Law
+</td>
+<td style="text-align:right;">
+2
+</td>
+<td style="text-align:right;">
+0.8
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Masters Program in Teaching Chinese as a Second Language
 </td>
 <td style="text-align:right;">
 2
@@ -543,39 +576,6 @@ Risk Management &amp; Insurance
 </tr>
 <tr>
 <td style="text-align:left;">
-Graduate Institute of Russian Studies
-</td>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:right;">
-0.8
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Graduate Institute of Technology Innovation and Intellectual Property ManagementTechnology and Innovation Management Program
-</td>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:right;">
-0.8
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Masters Program in Teaching Chinese as a Second Language
-</td>
-<td style="text-align:right;">
-2
-</td>
-<td style="text-align:right;">
-0.8
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
 Arabic Language &amp; Culture
 </td>
 <td style="text-align:right;">
@@ -588,61 +588,6 @@ Arabic Language &amp; Culture
 <tr>
 <td style="text-align:left;">
 English Ph.D. TESOL Program
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-0.4
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-History
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-0.4
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Japanese
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-0.4
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Korean Language and Culture
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-0.4
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Political Science
-</td>
-<td style="text-align:right;">
-1
-</td>
-<td style="text-align:right;">
-0.4
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-Turkish Language &amp; Culture
 </td>
 <td style="text-align:right;">
 1
@@ -730,6 +675,39 @@ Graduate Institute of Technology Innovation and Intellectual Property Management
 </tr>
 <tr>
 <td style="text-align:left;">
+History
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0.4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Japanese
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0.4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Korean Language and Culture
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0.4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
 Masters Program in Japan Studies
 </td>
 <td style="text-align:right;">
@@ -742,6 +720,28 @@ Masters Program in Japan Studies
 <tr>
 <td style="text-align:left;">
 Ph.D. Program in Communication
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0.4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Political Science
+</td>
+<td style="text-align:right;">
+1
+</td>
+<td style="text-align:right;">
+0.4
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+Turkish Language &amp; Culture
 </td>
 <td style="text-align:right;">
 1
@@ -807,8 +807,8 @@ PH.D.
 <p>Degree and Department</p>
 <p>The height of rectangular indicates the number of students. The width of the line indicates the number of students between connected rectangular.</p>
 <div class="figure" style="text-align: center">
-<div id="htmlwidget-99f8985d98dc37bb5882" style="width:1000px;height:900px;" class="sankeyNetwork html-widget"></div>
-<script type="application/json" data-for="htmlwidget-99f8985d98dc37bb5882">{"x":{"links":{"source":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2],"target":[3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,6,8,10,11,12,26,27,28,29,30,31,32,33,34,14,35,36,37,38,39,40,41,42,17,20,22,43,5,6,8,44,9,10,45,26,28,46,47,48,49,38,50,18],"value":[1,22,10,1,4,5,5,3,2,3,1,5,1,1,2,3,1,1,2,3,1,8,11,1,2,1,1,1,1,1,4,1,2,1,1,2,43,1,23,25,9,1,3,1,2,3,2,1,1,2,3,2,1,3,1,2,1,2,1,1,1,1,6,1,1,2],"group":["Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D."]},"nodes":{"name":["Bachelor","Master","PH.D.","Arabic Language & Culture","Bachelor Degree Program of International College of Innovation","Business Administration","Chinese Literature","Computer Science","Diplomacy","Economics","Education","English","Ethnology","History","International Business","Japanese","Korean Language and Culture","Money and Banking","Philosophy","Political Science","Psychology","Risk Management & Insurance","Sociology","Turkish Language & Culture","Undeclared Major in College of Communication"," International Masters Program in Applied Economics and Social Development (IMES)","Graduate Institute of Development Studies","Graduate Institute of Early Childhood Education","Graduate Institute of East Asian Studies","Graduate Institute of Linguistics","Graduate Institute of Russian Studies","Graduate Institute of Taiwanese Literature","Graduate Institute of Technology Innovation and Intellectual Property ManagementIntellectual Property Program","Graduate Institute of Technology Innovation and Intellectual Property ManagementTechnology and Innovation Management Program","IMBAInternational MBA","International Masters Program inInternational Studies (IMPIS)","Intl  Masters Program in AsiaPacific Studies (IMAS)","Intl Masters Program in International Communication Studies (IMICS)","Law","Master Program of Communication","Masters Program in Japan Studies","Masters Program in Teaching Chinese as a Second Language","MBA Program"," Management Information Systems","Doctors Program in Teaching Chinese as a Second Language","English Ph.D. TESOL Program","Graduate Institute of Library Information and Archival Studies","Graduate Institute of Religious Studies","Graduate Institute of Technology Innovation and Intellectual Property Management","International Doctoral Program in AsiaPacific Studies (IDAS)","Ph.D. Program in Communication"],"group":["Bachelor","Master","PH.D.","Arabic Language & Culture","Bachelor Degree Program of International College of Innovation","Business Administration","Chinese Literature","Computer Science","Diplomacy","Economics","Education","English","Ethnology","History","International Business","Japanese","Korean Language and Culture","Money and Banking","Philosophy","Political Science","Psychology","Risk Management & Insurance","Sociology","Turkish Language & Culture","Undeclared Major in College of Communication"," International Masters Program in Applied Economics and Social Development (IMES)","Graduate Institute of Development Studies","Graduate Institute of Early Childhood Education","Graduate Institute of East Asian Studies","Graduate Institute of Linguistics","Graduate Institute of Russian Studies","Graduate Institute of Taiwanese Literature","Graduate Institute of Technology Innovation and Intellectual Property ManagementIntellectual Property Program","Graduate Institute of Technology Innovation and Intellectual Property ManagementTechnology and Innovation Management Program","IMBAInternational MBA","International Masters Program inInternational Studies (IMPIS)","Intl  Masters Program in AsiaPacific Studies (IMAS)","Intl Masters Program in International Communication Studies (IMICS)","Law","Master Program of Communication","Masters Program in Japan Studies","Masters Program in Teaching Chinese as a Second Language","MBA Program"," Management Information Systems","Doctors Program in Teaching Chinese as a Second Language","English Ph.D. TESOL Program","Graduate Institute of Library Information and Archival Studies","Graduate Institute of Religious Studies","Graduate Institute of Technology Innovation and Intellectual Property Management","International Doctoral Program in AsiaPacific Studies (IDAS)","Ph.D. Program in Communication"],"source":[true,true,true,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false]},"options":{"NodeID":"name","NodeGroup":"name","LinkGroup":"source","colourScale":"d3.scaleOrdinal(d3.schemeCategory20);","fontSize":13,"fontFamily":"sans-serif","nodeWidth":15,"nodePadding":10,"units":"d3.scaleOrdinal(d3.schemeCategory20);","margin":{"top":null,"right":null,"bottom":null,"left":null},"iterations":0,"sinksRight":true}},"evals":["options.units"],"jsHooks":[]}</script>
+<div id="htmlwidget-0aff09371551c16c4195" style="width:1000px;height:900px;" class="sankeyNetwork html-widget"></div>
+<script type="application/json" data-for="htmlwidget-0aff09371551c16c4195">{"x":{"links":{"source":[0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2,2],"target":[3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,6,8,10,11,12,26,27,28,29,30,31,32,33,34,14,35,36,37,38,39,40,41,42,17,20,22,43,5,6,8,44,9,10,45,26,28,46,47,48,49,38,50,18],"value":[1,22,10,1,4,5,5,3,2,3,1,5,1,1,2,3,1,1,2,3,1,8,11,1,2,1,1,1,1,1,4,1,2,1,1,2,43,1,23,25,9,1,3,1,2,3,2,1,1,2,3,2,1,3,1,2,1,2,1,1,1,1,6,1,1,2],"group":["Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Bachelor","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","Master","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D.","PH.D."]},"nodes":{"name":["Bachelor","Master","PH.D.","Arabic Language & Culture","Bachelor Degree Program of International College of Innovation","Business Administration","Chinese Literature","Computer Science","Diplomacy","Economics","Education","English","Ethnology","History","International Business","Japanese","Korean Language and Culture","Money and Banking","Philosophy","Political Science","Psychology","Risk Management & Insurance","Sociology","Turkish Language & Culture","Undeclared Major in College of Communication"," International Masters Program in Applied Economics and Social Development (IMES)","Graduate Institute of Development Studies","Graduate Institute of Early Childhood Education","Graduate Institute of East Asian Studies","Graduate Institute of Linguistics","Graduate Institute of Russian Studies","Graduate Institute of Taiwanese Literature","Graduate Institute of Technology Innovation and Intellectual Property ManagementIntellectual Property Program","Graduate Institute of Technology Innovation and Intellectual Property ManagementTechnology and Innovation Management Program","IMBAInternational MBA","International Masters Program inInternational Studies (IMPIS)","Intl  Masters Program in AsiaPacific Studies (IMAS)","Intl Masters Program in International Communication Studies (IMICS)","Law","Master Program of Communication","Masters Program in Japan Studies","Masters Program in Teaching Chinese as a Second Language","MBA Program"," Management Information Systems","Doctors Program in Teaching Chinese as a Second Language","English Ph.D. TESOL Program","Graduate Institute of Library Information and Archival Studies","Graduate Institute of Religious Studies","Graduate Institute of Technology Innovation and Intellectual Property Management","International Doctoral Program in AsiaPacific Studies (IDAS)","Ph.D. Program in Communication"],"group":["Bachelor","Master","PH.D.","Arabic Language & Culture","Bachelor Degree Program of International College of Innovation","Business Administration","Chinese Literature","Computer Science","Diplomacy","Economics","Education","English","Ethnology","History","International Business","Japanese","Korean Language and Culture","Money and Banking","Philosophy","Political Science","Psychology","Risk Management & Insurance","Sociology","Turkish Language & Culture","Undeclared Major in College of Communication"," International Masters Program in Applied Economics and Social Development (IMES)","Graduate Institute of Development Studies","Graduate Institute of Early Childhood Education","Graduate Institute of East Asian Studies","Graduate Institute of Linguistics","Graduate Institute of Russian Studies","Graduate Institute of Taiwanese Literature","Graduate Institute of Technology Innovation and Intellectual Property ManagementIntellectual Property Program","Graduate Institute of Technology Innovation and Intellectual Property ManagementTechnology and Innovation Management Program","IMBAInternational MBA","International Masters Program inInternational Studies (IMPIS)","Intl  Masters Program in AsiaPacific Studies (IMAS)","Intl Masters Program in International Communication Studies (IMICS)","Law","Master Program of Communication","Masters Program in Japan Studies","Masters Program in Teaching Chinese as a Second Language","MBA Program"," Management Information Systems","Doctors Program in Teaching Chinese as a Second Language","English Ph.D. TESOL Program","Graduate Institute of Library Information and Archival Studies","Graduate Institute of Religious Studies","Graduate Institute of Technology Innovation and Intellectual Property Management","International Doctoral Program in AsiaPacific Studies (IDAS)","Ph.D. Program in Communication"],"source":[true,true,true,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false,false]},"options":{"NodeID":"name","NodeGroup":"name","LinkGroup":"source","colourScale":"d3.scaleOrdinal(d3.schemeCategory20);","fontSize":13,"fontFamily":"sans-serif","nodeWidth":15,"nodePadding":10,"units":"d3.scaleOrdinal(d3.schemeCategory20);","margin":{"top":null,"right":null,"bottom":null,"left":null},"iterations":0,"sinksRight":true}},"evals":["options.units"],"jsHooks":[]}</script>
 <p class="caption">
 National Chengchi University
 </p>
@@ -819,6 +819,7 @@ National Chengchi University
 <li><a href="FCU_admission.html">FCU逢甲大學</a></li>
 <li><a href="NCKU.html">NCKU國立成功大學</a></li>
 <li><a href="NCTU_NTHU.html">NCTU國立陽明交通大學,NTHU國立清華大學</a></li>
+<li><a href="NCCU.html">NCCU國立政治大學</a></li>
 </ul>
 <p>Note:</p>
 <ol style="list-style-type: decimal">
